--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tic-Tac_Toe</title>
 </head>
 <body class="box-border font-serif m-auto p-0 bg-[#0f172a]">
   <div id="root"></div>
